cloud-formation/ConfigToHdfNet.yaml
##
# AWS CloudFormation template targeted at deploying the ConfigToHdf
# lambda function and all of its supporting resources.
#
# https://aws.amazon.com/blogs/devops/passing-parameters-to-cloudformation-stacks-with-the-aws-cli-and-powershell/
#

# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/parameters-section-structure.html
# Parameters: 

# https://aws.amazon.com/premiumsupport/knowledge-center/internet-access-lambda-function/
Resources:
  #################################################
  # Create a VPC with a private and public subnet #
  #################################################

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-vpc.html
  ConfigToHdfVpc:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: ConfigToHdfVpc

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-subnet.html
  ConfigToHdfPrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ConfigToHdfVpc
      CidrBlock: 10.0.1.0/24
      Tags:
        - Key: Name
          Value: ConfigToHdfPrivateSubnet

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-subnet.html
  ConfigToHdfPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ConfigToHdfVpc
      CidrBlock: 10.0.2.0/24
      Tags:
        - Key: Name
          Value: ConfigToHdfPublicSubnet

  ##############################
  # Create an Internet Gateway #
  ##############################

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-internetgateway.html
  ConfigToHdfInternetGateway:
    Type: AWS::EC2::InternetGateway
    DependsOn: ConfigToHdfVpc
    Properties:
      Tags:
        - Key: Name
          Value: ConfigToHdfInternetGateway

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-vpc-gateway-attachment.html
  ConfigToHdfInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref ConfigToHdfInternetGateway
      VpcId: !Ref ConfigToHdfVpc

  ########################
  # Create a NAT Gateway #
  ########################

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-eip.html
  ConfigToHdfElasticIPAddress:
    Type: AWS::EC2::EIP
    Properties:
      Domain: ConfigToHdfVpc
      Tags:
        - Key: Name
          Value: ConfigToHdfElasticIPAddress

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-natgateway.html
  ConfigToHdfNatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: ConfigToHdfInternetGatewayAttachment
    Properties:
      AllocationId: !GetAtt ConfigToHdfElasticIPAddress.AllocationId
      SubnetId: !Ref ConfigToHdfPublicSubnet
      Tags:
        - Key: Name
          Value: ConfigToHdfNatGateway

  ###################################################
  # Create Route Table to route to Internet Gateway #
  ###################################################

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route-table.html
  ConfigToHdfIgwRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: ConfigToHdfVpc
    Properties: 
      VpcId: !Ref ConfigToHdfVpc
      Tags:
        - Key: Name
          Value: ConfigToHdfIgwRouteTable

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route.html
  ConfigToHdfIgwHeimdallRoute:
    Type: AWS::EC2::Route
    Properties:
       RouteTableId: !Ref ConfigToHdfIgwRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref ConfigToHdfInternetGateway

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-subnet-route-table-assoc.html
  ConfigToHdfPublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ConfigToHdfPublicSubnet
      RouteTableId: !Ref ConfigToHdfIgwRouteTable

  ##############################################
  # Create Route Table to route to NAT Gateway #
  ##############################################

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route-table.html
  ConfigToHdfNgwRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: ConfigToHdfVpc
    Properties: 
      VpcId: !Ref ConfigToHdfVpc
      Tags:
        - Key: Name
          Value: ConfigToHdfNgwRouteTable

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route.html
  ConfigToHdfNgwHeimdallRoute:
    Type: AWS::EC2::Route
    Properties:
       RouteTableId: !Ref ConfigToHdfNgwRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       NatGatewayId: !Ref ConfigToHdfNatGateway

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-subnet-route-table-assoc.html
  ConfigToHdfPrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ConfigToHdfPrivateSubnet
      RouteTableId: !Ref ConfigToHdfNgwRouteTable

  ####################################
  # Create Security Group for lamdba #
  ####################################

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
  ConfigToHdfSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http and https ingress and egress
      VpcId: !Ref ConfigToHdfVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: ConfigToHdfSecurityGroup

  ##############################################
  # Create Secrets Manager Endpoint for lambda #
  ##############################################

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-vpcendpoint.html
  ConfigToHdfSecretVpcEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      # PolicyDocument:
      #   Version: 2012-10-17
      #   Statement:
      #     - Effect: Allow
      #       Action:
      #         - secretsmanager:GetSecretValue
      #       Resource: !Ref ConfigToHdfSecret
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.secretsmanager'
      VpcId: !Ref ConfigToHdfVpc
      VpcEndpointType: Interface
      SecurityGroupIds:
        - !Ref ConfigToHdfSecurityGroup
      SubnetIds:
        - !Ref ConfigToHdfPrivateSubnet

  

  

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route-table.html
  # ConfigToHdfRouteTable:
  #   Type: AWS::EC2::RouteTable
  #   DependsOn: ConfigToHdfVpc
  #   Properties: 
  #     VpcId: !Ref ConfigToHdfVpc
  #     Tags:
  #       - Key: Name
  #         Value: ConfigToHdfRouteTable

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route.html
  # ConfigToHdfHeimdallRoute:
  #   Type: AWS::EC2::Route
  #   Properties:
  #      RouteTableId: !Ref ConfigToHdfRouteTable
  #      DestinationCidrBlock: 0.0.0.0/0
  #      NatGatewayId: !Ref ConfigToHdfNatGateway

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-gatewayroutetableassociation.html
  # ConfigToHdfGatewayRouteTableAssociation:
  #   Type: AWS::EC2::GatewayRouteTableAssociation
  #   Properties: 
  #     GatewayId: !Ref ConfigToHdfInternetGateway
  #     RouteTableId: !Ref ConfigToHdfRouteTable

  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-subnet-route-table-assoc.html
  # ConfigToHdfSubnetRouteTableAssociation:
  #   Type: AWS::EC2::SubnetRouteTableAssociation
  #   Properties:
  #     SubnetId: !Ref ConfigToHdfSubnet
  #     RouteTableId: !Ref ConfigToHdfRouteTable
